sidebar item alignment

--- a/index.html
+++ b/index.html
@@ -60,48 +60,63 @@
             </div>
         </div>
         <div class="sidebar">
-            <div>
-                Dashboard
-            </div>
             <div class="list-items">
+                <div class="sidebar-header">
+                    <i class="fa-solid fa-chess-board"></i>
+                    <div>
+                        Dashboard
+                    </div>
+                </div>
                 <div class="top-list">
                     <ul>
                         <li>
-                            Home
+                            <i class="fa-solid fa-house"></i>
+                            <div>
+                                Home
+                            </div>
                         </li>
                         <li>
-                            Profile
+                            <i class="fa-regular fa-user"></i>
+                            <div>
+                                Profile
+                            </div>
                         </li>
                         <li>
-                            Messages
+                            <i class="fa-solid fa-message"></i>
+                            <div>
+                                Messages
+                            </div>
                         </li>
                         <li>
-                            History
+                            <i class="fa-solid fa-clock"></i> 
+                            <div>
+                                History
+                            </div>
                         </li>
                         <li>
-                            Tasks
+                            <i class="fa-solid fa-list-check"></i>
+                            <div>
+                                Tasks
+                            </div>
                         </li>
                         <li>
-                            Communities
+                            <i class="fa-solid fa-user-group"></i>
+                            <div>
+                                Communities
+                            </div>
                         </li>
                     </ul>
                 </div>
-
                 <div class="bottom-list">
                     <ul>
-                        <li>
-                            Settings
-                        </li>
-                        <li>
-                            Support
-                        </li>
-                        <li>
-                            Privacy
-                        </li>
+                        <li><i class="fa-solid fa-bars"></i><div>Settings</div></li>
+                        <li><i class="fa-solid fa-phone"></i><div>Support</div></li>
+                        <li><i class="fa-solid fa-shield"></i><div>Privacy</div></li>
                     </ul>
                 </div>
             </div>
         </div>
+        
 
         <div class="content">
             <div class="nav">
