sidebar menu complete

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             </div>
         </div>
         <div class="sidebar">
-            <div class="list-items">
-                <div class="sidebar-header">
-                    <i class="fa-solid fa-chess-board"></i>
-                    <div>
-                        Dashboard
-                    </div>
+            <div class="sidebar-header">
+                <i class="fa-solid fa-chess-board"></i>
+                <div class="dashboard-text">
+                    Dashboard
                 </div>
+            </div>
+            <div class="list-items">
                 <div class="top-list">
                     <ul>
                         <li>
