--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <i class="fa-regular fa-bell"></i>
                     </div>
                     <div class="logo">
-                        <img src="./assets/ishan-image.jpeg" alt="logo">
+                       <img src="./assets/ishan-image.jpeg" alt="">
                     </div>
                     <div class="name">
                         Ishan Kashyap
@@ -33,9 +33,9 @@
             </div>
 
             <div class="bottom-header">
-                <div class="logo-with-text">
+                <div class="logo-with-text left-side">
                     <div class="logo">
-                        <img src="./assets/ishan-image.jpeg" alt="logo">
+                        <img src="./assets/ishan-image.jpeg" alt="">
                     </div>
                     <div class="text">
                         <div class="top-text">
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu-buttons">
+                <div class="menu-buttons right-side">
                     <div>
                         New
                     </div>
